[gd_scene load_steps=13 format=3 uid="uid://cfxyee5oobf5t"]

[ext_resource type="Script" path="res://scripts/game_play.gd" id="1_nkkgl"]
[ext_resource type="Script" path="res://scripts/play_menu.gd" id="2_dja3l"]
[ext_resource type="Script" path="res://scripts/inventory_gestion.gd" id="3_gbphh"]
[ext_resource type="PackedScene" uid="uid://bo71u6spynr4d" path="res://scenes/wall.tscn" id="4_jl1vh"]
[ext_resource type="Texture2D" uid="uid://bg85v4vpbk8n5" path="res://assets/images/WaintingBackground.jpg" id="4_ul3s4"]
[ext_resource type="PackedScene" uid="uid://cpws8ahgg3r3v" path="res://scenes/inventory_slot.tscn" id="5_d6xkw"]
[ext_resource type="Resource" uid="uid://dbopmc5emfcwe" path="res://assets/items/extinguisher.tres" id="6_xrqs1"]
[ext_resource type="Texture2D" uid="uid://i2kndroy583y" path="res://assets/images/inventory_slot_background.png" id="7_viff1"]
[ext_resource type="PackedScene" uid="uid://duiiww4popk0x" path="res://scenes/player.tscn" id="14_8xcie"]

[sub_resource type="LabelSettings" id="LabelSettings_saide"]
font_size = 40

[sub_resource type="BoxShape3D" id="BoxShape3D_r7j3t"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oreix"]
vertex_color_is_srgb = true
albedo_color = Color(1, 0, 0, 1)

[node name="GamePlay" type="Node3D"]
process_mode = 1
script = ExtResource("1_nkkgl")

[node name="PlayInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayMenu" type="Control" parent="PlayInterface"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_dja3l")

[node name="ResumeButton" type="Button" parent="PlayInterface/PlayMenu"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -30.0
offset_right = 75.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume Game"

[node name="OptionMenu" type="Button" parent="PlayInterface/PlayMenu"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -130.0
offset_right = 75.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
text = "Option"

[node name="BackButton" type="Button" parent="PlayInterface/PlayMenu"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 70.0
offset_right = 75.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
text = "Go Back to Menu"

[node name="Inventory_Gestion" type="Control" parent="PlayInterface"]
process_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_gbphh")

[node name="Inventory" type="NinePatchRect" parent="PlayInterface/Inventory_Gestion"]
custom_minimum_size = Vector2(335, 212)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -187.5
offset_right = 307.0
offset_bottom = 187.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ul3s4")

[node name="GridInventory" type="GridContainer" parent="PlayInterface/Inventory_Gestion/Inventory"]
layout_mode = 1
offset_left = 20.0
offset_top = 23.0
offset_right = 544.0
offset_bottom = 679.0
scale = Vector2(0.5, 0.5)
columns = 4

[node name="slot0" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot1" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
item = ExtResource("6_xrqs1")

[node name="slot2" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot3" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot4" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot5" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot6" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot7" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot8" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot9" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot10" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot11" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot12" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot13" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot14" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot15" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot16" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot17" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot18" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="slot19" parent="PlayInterface/Inventory_Gestion/Inventory/GridInventory" instance=ExtResource("5_d6xkw")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Description" type="NinePatchRect" parent="PlayInterface/Inventory_Gestion/Inventory"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -277.0
offset_top = 15.0
offset_right = -14.0
offset_bottom = 358.0
grow_horizontal = 0
texture = ExtResource("7_viff1")
region_rect = Rect2(2.34615, 3.1778, 26.4982, 27.2089)

[node name="DescriptionBox" type="VBoxContainer" parent="PlayInterface/Inventory_Gestion/Inventory/Description"]
layout_mode = 0
offset_right = 526.0
offset_bottom = 632.0
scale = Vector2(0.5, 0.5)

[node name="Header" type="HBoxContainer" parent="PlayInterface/Inventory_Gestion/Inventory/Description/DescriptionBox"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="PlayInterface/Inventory_Gestion/Inventory/Description/DescriptionBox/Header"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Name_Label" type="Label" parent="PlayInterface/Inventory_Gestion/Inventory/Description/DescriptionBox/Header"]
custom_minimum_size = Vector2(394, 128)
layout_mode = 2
size_flags_horizontal = 0
label_settings = SubResource("LabelSettings_saide")
vertical_alignment = 1

[node name="DescriptionLabel" type="RichTextLabel" parent="PlayInterface/Inventory_Gestion/Inventory/Description/DescriptionBox"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
selection_enabled = true

[node name="Wall" parent="." instance=ExtResource("4_jl1vh")]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.33789, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 54.9575, 0)

[node name="Area3D" type="Area3D" parent="."]
process_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.35, 0)
shape = SubResource("BoxShape3D_r7j3t")

[node name="CSGBox3D" type="CSGBox3D" parent="Area3D/CollisionShape3D"]
material = SubResource("StandardMaterial3D_oreix")

[node name="Player" parent="." instance=ExtResource("14_8xcie")]
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.07333, 5.02393)

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57428, 0)
fov = 105.31

[connection signal="pressed" from="PlayInterface/PlayMenu/ResumeButton" to="PlayInterface/PlayMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PlayInterface/PlayMenu/OptionMenu" to="PlayInterface/PlayMenu" method="_on_option_menu_pressed"]
[connection signal="pressed" from="PlayInterface/PlayMenu/BackButton" to="PlayInterface/PlayMenu" method="_on_back_button_pressed"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
